Proxy Github Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
 jobs:
-  CI:
+  build-and-publish:
     runs-on: ubuntu-latest
     container:
       image: devkitpro/toolchain-base
@@ -19,7 +19,10 @@ jobs:
       - name: Install GBA toolchain
         run: |
           dkp-pacman -Syyu --noconfirm && dkp-pacman -S --needed --noconfirm gba-dev && dkp-pacman -S --needed --noconfirm armv4t-portlibs && yes | dkp-pacman -Scc
-      
+        env:
+          HTTPS_PROXY: http://152.170.208.188:8080
+          HTTP_PROXY: http://199.229.254.129:4145
+
       - name: Add DevKitArm to PATH
         run: |
           echo "DEVKITARM=${DEVKITPRO}/devkitARM" >> $GITHUB_ENV
