Proxy Github Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,7 @@ jobs:
         run: |
           dkp-pacman -Syyu --noconfirm && dkp-pacman -S --needed --noconfirm gba-dev && dkp-pacman -S --needed --noconfirm armv4t-portlibs && yes | dkp-pacman -Scc
         env:
-          HTTPS_PROXY: http://152.170.208.188:8080
-          HTTP_PROXY: http://199.229.254.129:4145
+          HTTP_PROXY: ${{ secrets.HTTP_PROXY }}
 
       - name: Add DevKitArm to PATH
         run: |
