--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Checkout submodules
-        run: git submodule update --init --recursive
+        run: |
+          git config --global --add safe.directory /__w/untitled-adventure-gba/untitled-adventure-gba
+          git submodule update --init --recursive
       
       - name: Install GBA toolchain
         run: |
