--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -25,6 +25,10 @@ RUN wget https://www.python.org/ftp/python/3.12.0/Python-3.12.0.tgz && \
     cd .. && \
     rm -rf Python-3.12.0 Python-3.12.0.tgz
 
+# # Make Python 3.12 the default Python version
+# RUN ln -s /usr/local/bin/python3.12 /usr/local/bin/python3 && \
+#     ln -s /usr/local/bin/pip3.12 /usr/local/bin/pip3
+
 # Set DEVKITARM environment variable and update PATH
 ENV DEVKITARM=${DEVKITPRO}/devkitARM
 ENV PATH=${DEVKITARM}/bin:${PATH}
