--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,32 +6,46 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     container:
-      image: developerforhire/gba-dkp-base:0.0.1
+      image: devkitpro/toolchain-base
+      env:
+        TEST: true
       volumes:
-        - :/volume_mount
+        - .:/volume_mount
       options: --cpus 1
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
           submodules: true
+      
+      - name: Install GBA toolchain
+        run: |
+          dkp-pacman -Syyu --noconfirm && dkp-pacman -S --needed --noconfirm gba-dev && dkp-pacman -S --needed --noconfirm armv4t-portlibs && yes | dkp-pacman -Scc
+        env:
+          HTTP_PROXY: ${{ secrets.HTTP_PROXY }}
+
+      - name: Install Python 3.12
+        run: |
+          wget https://www.python.org/ftp/python/3.12.0/Python-3.12.0.tgz
+          tar xzf Python-3.12.0.tgz
+          cd Python-3.12.0
+          ./configure --enable-optimizations
+          make altinstall
+          cd ..
+          rm -rf Python-3.12.0 Python-3.12.0.tgz
 
       - name: Add DevKitArm to PATH
         run: |
           echo "DEVKITARM=${DEVKITPRO}/devkitARM" >> $GITHUB_ENV
           echo "PATH=${DEVKITARM}/bin:${PATH}" >> $GITHUB_ENV
-      
+
       - name: Debug
         run: |
+          echo $DEVKITPRO
           echo $DEVKITARM
           echo $PATH
-          python3.12 --version
-          ls -l /volume_mount
+          ls -la .
       
-      - name: Install Python 3.12 dependencies
-        run: |
-          python3.12 -m pip install -r requirements.txt
-  
       - name: Build .gba file
         run: |
           make assets
