Add git attributes for keeping line endings consistent between MacOS, Linux, and Windows

--- a/.gitattributes
+++ b/.gitattributes
@@ -11,7 +11,12 @@
 *.md text
 *.json text
 *.yml text
-.git* text
+*.tsx text
+*.tmx text
+*.xml text
+.gitattributes text
+.gitignore text
+.gitmodules text
 LICENSE text
 Makefile text
 Dockerfile text
